# calamity_interpreter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_MANUAL.txt  bootstrap.sh  build.sh  code_volume_counter.c  grammar.ebnf  main.js  main_ast.txt  main_calamity.cpp  main_lexer.cpp  main_lexertl_gen.cpp  main_parser.cpp  main_tokens.txt  mem.c  rebuild.sh
include/: ast.h  cui.h  defs.h  error.h  extesion.h  lexer.h  lexertl_gen.h  message_exception.h  meta.h  native_error.h  native_exception.h  not_null_ptr.h  parser.h  point2d.h  std_ext.h  token.h  tree.h  var.h  var_boolean.h  var_boolean_inline_impl.h  var_double.h  var_function.h  var_integer.h  var_list.h  var_null.h  var_number.h  var_number_inline_impl.h  var_object.h  var_string.h  var_string_impl.h  var_string_inline_impl.h  var_substring.h  var_substring_inline_impl.h  var_undefined.h  vtem.h
include/deferred/: ast.h  fsm.h  interpreter.h  interpreter_def.h  main_parser.h  std_function.h
lexertl_gen/: CMakeLists.txt  build.sh  main_lexertl_gen.cpp  rebuild.sh  run.sh
scripts/: build_all.sh  run_tests.sh
src/: ast.cpp  cui.cpp  defs.cpp  error.cpp  lexer.cpp  message_exception.cpp  parser.cpp  std_ext.cpp  token.cpp  var.cpp  var_boolean.cpp  var_double.cpp  var_function.cpp  var_integer.cpp  var_list.cpp  var_number.cpp  var_object.cpp  var_string.cpp  var_substring.cpp  vtem.cpp
src/deferred/: ast.cpp  fsm.cpp  interpreter.cpp  interpreter_def.cpp  parser.cpp  std_fucntion.сpp
tests/: .gitignore  CMakeLists.txt  task1_test.c  task2_test.c  task3_test.c  tests.cpp
